scss/partials/_search.scss
div.search-box {
  width: 320px;
  height: 32px;
  background-color: rgba($light_ui_grey, 0.2);
  border-radius: 4px;
  color: $ui_grey;
  position: relative;
  transition: width 320ms ease-in, background-color 320ms ease-in;

  @include mobile() {
    position: absolute;
    top: 57px;
    left: 0px;
    width: 100vw;
    height: calc(100vh - 57px);
    background-color: white;
    border-radius: unset;
    z-index: 1081;
    padding: 16px 24px 0px;
    border: none;
    box-shadow: none;
    transition: width 0ms ease-in, background-color 0ms ease-in;

    &.active {
      border: none;
      box-shadow: none;
    }
  }

  &.active {
    background-color: white;
    border: 1px solid $light_ui_grey;
    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.07);
    width: 430px;

    @include mobile() {
      border: 0px solid white;
      box-shadow: none;
    }

    div.spyglass-icon {
      left: 8px;
      opacity: 0.5;
    }

    input.search {
      width: calc(100vw - 48px);
      left: 8px;

      &:before {
        opacity: 0.4;
      }

      &::placeholder {
        color: $deep_navy;
      }
    }
  }

  div.spyglass-icon {
    background-image: cdnUrl("/img/ML/spyglass.svg");
    background-size: 16px 16px;
    background-repeat: no-repeat;
    background-position: 0px center;
    width: 16px;
    height: 16px;
    position: absolute;
    left: 101px;
    top: 8px;

    @include mobile() {
      display: none;
    }
  }

  input.search {
    position: absolute;
    top: 4px;
    left: 101px;
    outline: none;
    border: none;
    background-color: transparent;
    text-align: left;
    padding: 0 24px;
    @include avenir_R();
    font-size: 14px;
    color: $deep_navy;
    width: 118px;
    height: 24px;

    &:placeholder, &::placeholder {
      color: $ui_grey;
    }

    @include mobile() {
      position: relative;
      left: unset;
      top: unset;
      width: calc(100% - 24px);
      height: 24px;
      padding: 0;
      margin: 0 0 12px 0;
    }
  }

  &:not(.active) {
    button.search-close {
      display: none;

      @include mobile() {
        display: block;
      }
    }
  }

  button.search-close {
    width: 24px;
    height: 24px;
    background-color: transparent;
    background-image: cdnUrl("/img/ML/black_close.svg");
    background-size: 10px 10px;
    background-position: center;
    background-repeat: no-repeat;
    opacity: 0.4;
    border: none;
    margin: 0;
    padding: 0;
    outline: none;
    position: absolute;
    top: 4px;
    right: 8px;

    @include mobile() {
      right: 24px;
      top: 16px;
    }

    &:hover {
      opacity: 0.5;
    }
  }
}

div.search-results.inactive {
  display: none;
}

div.search-results {
  border: 1px solid $light_ui_grey;
  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.07);
  border-radius: 5px;
  margin: 48px 0px 0px 0px;
  width: 430px;
  text-align: left;
  background-color: white;
  max-height: calc(100vh - 108px);

  @include mobile() {
    position: relative;
    box-shadow: none;
    width: 100vw;
    margin: 0;
    padding: 0;
    border-radius: 0;
    border: none;
    margin-left: -24px;
    border-top: 1px solid #ECECEC;
  }

  div.header {
    padding: 16px 16px 6px 16px;
    color: $deep_navy;

    @include mobile() {
      padding: 20px 24px 10px 24px;
    }

    span {
      @include avenir_H();
      font-size: 12px;
      line-height: 12px;
      text-transform: uppercase;
      float: left;
      color: $light_ui_grey;
    }

    span.count {
      margin-left: 5px;
    }
  }

  div.search-results-container {
    overflow-y: auto;
    max-height: calc(100vh - 180px - 47px);

    @include mobile() {
      max-height: calc(100vh - 80px - 33px);
    }

    div.search-result {
      width: 100%;
      font-size: 14px;
      cursor: pointer;

      * {
        cursor: pointer;
      }

      div.search-result-box {
        @include avenir_H();
        padding: 5px 16px 5px 16px;

        @include activity-author();

        div.user-avatar-img-container {
          margin-right: 16px;
        }

        div.name {
          font-size: 11px;
        }

        div.title {
          overflow: hidden;
          text-overflow: ellipsis;
          color: $deep_navy;
          @include avenir_M();
          font-size: 14px;
          max-width: 100%;
          white-space: nowrap;
        }

        div.time-since {
          overflow: hidden;
          text-overflow: ellipsis;
          color: $ui_grey;
          @include avenir_R();
          font-size: 12px;
        }

        &:hover {
          div.title {
            color: $carrot_green;
          }
        }
      }
    }

    div.search-result:last-child {
      padding: 0px 0px 10px 0px;
    }
  }

  div.show-more {
    color: $carrot_green_2;
    font-size: 14px;
    padding: 5px 16px 10px 16px;
    cursor: pointer;
    text-align: center;
    width: 100%;

    button {
      font-size: 14px;
      line-height: 1;
      margin-top: 4px;
      padding-left: 22px;
      position: relative;

      &:before {
        position: absolute;
        content: "";
        background-image: cdnUrl("/img/ML/keep_reading_chevron.svg");
        background-size: 14px 8px;
        background-position: center;
        background-repeat: no-repeat;
        width: 14px;
        height: 8px;
        top: 4px;
        left: 0px;
      }
    }
  }

  div.empty-result {
    width: 100%;
    padding: 0px 16px 16px;
    font-size: 16px;

    @include mobile() {
      padding: 6px 24px;
      width: auto;
    }

    img {
      margin: auto;
      display: block;
    }

    div.message {
      margin: auto;
      width: 100%;
      @include avenir_R();
      font-size: 14px;
      color: $deep_navy;
    }
  }
}

