Fix search on iOS too.

--- a/scss/partials/_search.scss
+++ b/scss/partials/_search.scss
@@ -36,6 +36,7 @@ div.search-box {
     @include mobile() {
       border: 0px solid white;
       box-shadow: none;
+      width: 100vw;
     }
 
     div.spyglass-icon {
@@ -44,8 +45,13 @@ div.search-box {
     }
 
     input.search {
-      width: calc(100vw - 48px);
+      width: calc(100vw - 42px);
       left: 8px;
+
+      @include mobile() {
+        width: calc(100% - 16px);
+        left: unset;
+      }
 
       &:before {
         opacity: 0.4;
@@ -96,7 +102,7 @@ div.search-box {
       position: relative;
       left: unset;
       top: unset;
-      width: calc(100% - 24px);
+      width: calc(100% - 16px);
       height: 24px;
       padding: 0;
       margin: 0 0 12px 0;
@@ -131,7 +137,7 @@ div.search-box {
     right: 8px;
 
     @include mobile() {
-      right: 24px;
+      right: 13px;
       top: 16px;
     }
 
